PgnParser/Parser/PgnParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.1 H:\\Work\\redchess\\PgnParser\\Pgn.g 2015-03-02 16:54:12

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

namespace  Redchess.Pgn 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.1")]
[System.CLSCompliant(false)]
public partial class PgnParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLACK", "BLOCK_COMMENT", "CAPTURE", "CASTLE_KINGSIDE", "CASTLE_QUEENSIDE", "CHECK", "COLUMN", "DATE", "EVENT", "GAME_RESULT", "GAME_RESULT_END_OF_MOVETEXT", "INTEGER", "LEFT_BRACKET", "LEFT_CURLY_BRACKET", "LEFT_TAG", "LINE_COMMENT", "MATE", "MOVE_ANALYSIS", "MOVE_LABEL", "NO_MOVE", "NUMERIC_ANNOTATION_GLYPH", "PIECE_SYMBOL", "PIECE_TO_SQUARE", "PROMOTES_TO", "PROMOTES_TO_PIECE", "QUOTE", "QUOTED_STRING", "RESULT", "RIGHT_BRACKET", "RIGHT_CURLY_BRACKET", "RIGHT_TAG", "ROUND", "ROW", "SITE", "SQUARE", "TAG_NAME", "TAKES", "UNAMBIGUOUS_PIECE_WITH_COLUMN", "UNAMBIGUOUS_PIECE_WITH_ROW", "UNAMBIGUOUS_PIECE_WITH_ROW_AND_COLUMN", "WHITE", "WS"
	};
	public const int EOF=-1;
	public const int BLACK=4;
	public const int BLOCK_COMMENT=5;
	public const int CAPTURE=6;
	public const int CASTLE_KINGSIDE=7;
	public const int CASTLE_QUEENSIDE=8;
	public const int CHECK=9;
	public const int COLUMN=10;
	public const int DATE=11;
	public const int EVENT=12;
	public const int GAME_RESULT=13;
	public const int GAME_RESULT_END_OF_MOVETEXT=14;
	public const int INTEGER=15;
	public const int LEFT_BRACKET=16;
	public const int LEFT_CURLY_BRACKET=17;
	public const int LEFT_TAG=18;
	public const int LINE_COMMENT=19;
	public const int MATE=20;
	public const int MOVE_ANALYSIS=21;
	public const int MOVE_LABEL=22;
	public const int NO_MOVE=23;
	public const int NUMERIC_ANNOTATION_GLYPH=24;
	public const int PIECE_SYMBOL=25;
	public const int PIECE_TO_SQUARE=26;
	public const int PROMOTES_TO=27;
	public const int PROMOTES_TO_PIECE=28;
	public const int QUOTE=29;
	public const int QUOTED_STRING=30;
	public const int RESULT=31;
	public const int RIGHT_BRACKET=32;
	public const int RIGHT_CURLY_BRACKET=33;
	public const int RIGHT_TAG=34;
	public const int ROUND=35;
	public const int ROW=36;
	public const int SITE=37;
	public const int SQUARE=38;
	public const int TAG_NAME=39;
	public const int TAKES=40;
	public const int UNAMBIGUOUS_PIECE_WITH_COLUMN=41;
	public const int UNAMBIGUOUS_PIECE_WITH_ROW=42;
	public const int UNAMBIGUOUS_PIECE_WITH_ROW_AND_COLUMN=43;
	public const int WHITE=44;
	public const int WS=45;

	public PgnParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public PgnParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return PgnParser.tokenNames; } }
	public override string GrammarFileName { get { return "H:\\Work\\redchess\\PgnParser\\Pgn.g"; } }


		private int m_variantDepth = 0;
		public bool PlayGame;
	    private static char[] c_doubleQuote = new [] { '"' }; 

		private Dictionary<string,string> m_optionalTags = new Dictionary<string,string>();
		public IDictionary<string,string> OptionalTags { get { return m_optionalTags; } }

		public string Event { get; private set; }
		public string Site { get; private set; }
		public string Date { get; private set; }
		public string Round { get; private set; }
		public string Black { get; private set; }
		public string White { get; private set; }
		public string Result { get; private set; }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_parse();
	partial void LeaveRule_parse();
	// $ANTLR start "parse"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:99:8: public parse : document ;
	[GrammarRule("parse")]
	public void parse()
	{
		EnterRule_parse();
		EnterRule("parse", 1);
		TraceIn("parse", 1);
		try { DebugEnterRule(GrammarFileName, "parse");
		DebugLocation(99, 24);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:99:14: ( document )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:99:16: document
			{
			DebugLocation(99, 16);
			PushFollow(Follow._document_in_parse658);
			document();
			PopFollow();


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("parse", 1);
			LeaveRule("parse", 1);
			LeaveRule_parse();
		}
		DebugLocation(99, 24);
		} finally { DebugExitRule(GrammarFileName, "parse"); }
		return;

	}
	// $ANTLR end "parse"

	partial void EnterRule_parseTag();
	partial void LeaveRule_parseTag();
	// $ANTLR start "parseTag"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:100:8: public parseTag : ( compulsoryTag | optionalTag );
	[GrammarRule("parseTag")]
	public void parseTag()
	{
		EnterRule_parseTag();
		EnterRule("parseTag", 2);
		TraceIn("parseTag", 2);
		try { DebugEnterRule(GrammarFileName, "parseTag");
		DebugLocation(100, 46);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:100:17: ( compulsoryTag | optionalTag )
			int alt1=2;
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==LEFT_TAG))
			{
				int LA1_2 = input.LA(2);

				if ((LA1_2==BLACK||(LA1_2>=DATE && LA1_2<=EVENT)||LA1_2==RESULT||LA1_2==ROUND||LA1_2==SITE||LA1_2==WHITE))
				{
					alt1 = 1;
				}
				else if ((LA1_2==TAG_NAME))
				{
					alt1 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 1, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 1, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:100:19: compulsoryTag
				{
				DebugLocation(100, 19);
				PushFollow(Follow._compulsoryTag_in_parseTag668);
				compulsoryTag();
				PopFollow();


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:100:35: optionalTag
				{
				DebugLocation(100, 35);
				PushFollow(Follow._optionalTag_in_parseTag672);
				optionalTag();
				PopFollow();


				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("parseTag", 2);
			LeaveRule("parseTag", 2);
			LeaveRule_parseTag();
		}
		DebugLocation(100, 46);
		} finally { DebugExitRule(GrammarFileName, "parseTag"); }
		return;

	}
	// $ANTLR end "parseTag"

	partial void EnterRule_document();
	partial void LeaveRule_document();
	// $ANTLR start "document"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:102:1: document : gameList EOF ;
	[GrammarRule("document")]
	private void document()
	{
		EnterRule_document();
		EnterRule("document", 3);
		TraceIn("document", 3);
		try { DebugEnterRule(GrammarFileName, "document");
		DebugLocation(102, 24);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:102:10: ( gameList EOF )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:102:12: gameList EOF
			{
			DebugLocation(102, 12);
			PushFollow(Follow._gameList_in_document681);
			gameList();
			PopFollow();

			DebugLocation(102, 21);
			Match(input,EOF,Follow._EOF_in_document683); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("document", 3);
			LeaveRule("document", 3);
			LeaveRule_document();
		}
		DebugLocation(102, 24);
		} finally { DebugExitRule(GrammarFileName, "document"); }
		return;

	}
	// $ANTLR end "document"

	partial void EnterRule_gameList();
	partial void LeaveRule_gameList();
	// $ANTLR start "gameList"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:104:1: gameList : ( game )+ ;
	[GrammarRule("gameList")]
	private void gameList()
	{
		EnterRule_gameList();
		EnterRule("gameList", 4);
		TraceIn("gameList", 4);
		try { DebugEnterRule(GrammarFileName, "gameList");
		DebugLocation(104, 17);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:104:10: ( ( game )+ )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:104:12: ( game )+
			{
			DebugLocation(104, 12);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:104:12: ( game )+
			int cnt2=0;
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==LEFT_TAG))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch (alt2)
				{
				case 1:
					DebugEnterAlt(1);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:104:12: game
					{
					DebugLocation(104, 12);
					PushFollow(Follow._game_in_gameList692);
					game();
					PopFollow();


					}
					break;

				default:
					if (cnt2 >= 1)
						goto loop2;

					EarlyExitException eee2 = new EarlyExitException( 2, input );
					DebugRecognitionException(eee2);
					throw eee2;
				}
				cnt2++;
			}
			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("gameList", 4);
			LeaveRule("gameList", 4);
			LeaveRule_gameList();
		}
		DebugLocation(104, 17);
		} finally { DebugExitRule(GrammarFileName, "gameList"); }
		return;

	}
	// $ANTLR end "gameList"

	partial void EnterRule_generalTagList();
	partial void LeaveRule_generalTagList();
	// $ANTLR start "generalTagList"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:1: generalTagList : ( optionalTag | compulsoryTag ) ( ( WS )* ( optionalTag | compulsoryTag ) )* ;
	[GrammarRule("generalTagList")]
	private void generalTagList()
	{
		EnterRule_generalTagList();
		EnterRule("generalTagList", 5);
		TraceIn("generalTagList", 5);
		try { DebugEnterRule(GrammarFileName, "generalTagList");
		DebugLocation(107, 80);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:16: ( ( optionalTag | compulsoryTag ) ( ( WS )* ( optionalTag | compulsoryTag ) )* )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:18: ( optionalTag | compulsoryTag ) ( ( WS )* ( optionalTag | compulsoryTag ) )*
			{
			DebugLocation(107, 18);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:18: ( optionalTag | compulsoryTag )
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==LEFT_TAG))
			{
				int LA3_2 = input.LA(2);

				if ((LA3_2==BLACK||(LA3_2>=DATE && LA3_2<=EVENT)||LA3_2==RESULT||LA3_2==ROUND||LA3_2==SITE||LA3_2==WHITE))
				{
					alt3 = 2;
				}
				else if ((LA3_2==TAG_NAME))
				{
					alt3 = 1;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:19: optionalTag
				{
				DebugLocation(107, 19);
				PushFollow(Follow._optionalTag_in_generalTagList704);
				optionalTag();
				PopFollow();


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:31: compulsoryTag
				{
				DebugLocation(107, 31);
				PushFollow(Follow._compulsoryTag_in_generalTagList706);
				compulsoryTag();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(107, 46);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:46: ( ( WS )* ( optionalTag | compulsoryTag ) )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				try
				{
					alt6 = dfa6.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:47: ( WS )* ( optionalTag | compulsoryTag )
					{
					DebugLocation(107, 47);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:47: ( WS )*
					try { DebugEnterSubRule(4);
					while (true)
					{
						int alt4=2;
						try { DebugEnterDecision(4, false);
						int LA4_1 = input.LA(1);

						if ((LA4_1==WS))
						{
							alt4 = 1;
						}


						} finally { DebugExitDecision(4); }
						switch ( alt4 )
						{
						case 1:
							DebugEnterAlt(1);
							// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:47: WS
							{
							DebugLocation(107, 47);
							Match(input,WS,Follow._WS_in_generalTagList710); 

							}
							break;

						default:
							goto loop4;
						}
					}

					loop4:
						;

					} finally { DebugExitSubRule(4); }

					DebugLocation(107, 51);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:51: ( optionalTag | compulsoryTag )
					int alt5=2;
					try { DebugEnterSubRule(5);
					try { DebugEnterDecision(5, false);
					int LA5_1 = input.LA(1);

					if ((LA5_1==LEFT_TAG))
					{
						int LA5_2 = input.LA(2);

						if ((LA5_2==BLACK||(LA5_2>=DATE && LA5_2<=EVENT)||LA5_2==RESULT||LA5_2==ROUND||LA5_2==SITE||LA5_2==WHITE))
						{
							alt5 = 2;
						}
						else if ((LA5_2==TAG_NAME))
						{
							alt5 = 1;
						}
						else
						{
							NoViableAltException nvae = new NoViableAltException("", 5, 1, input, 2);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else
					{
						NoViableAltException nvae = new NoViableAltException("", 5, 0, input, 1);
						DebugRecognitionException(nvae);
						throw nvae;
					}
					} finally { DebugExitDecision(5); }
					switch (alt5)
					{
					case 1:
						DebugEnterAlt(1);
						// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:52: optionalTag
						{
						DebugLocation(107, 52);
						PushFollow(Follow._optionalTag_in_generalTagList714);
						optionalTag();
						PopFollow();


						}
						break;
					case 2:
						DebugEnterAlt(2);
						// H:\\Work\\redchess\\PgnParser\\Pgn.g:107:64: compulsoryTag
						{
						DebugLocation(107, 64);
						PushFollow(Follow._compulsoryTag_in_generalTagList716);
						compulsoryTag();
						PopFollow();


						}
						break;

					}
					} finally { DebugExitSubRule(5); }


					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("generalTagList", 5);
			LeaveRule("generalTagList", 5);
			LeaveRule_generalTagList();
		}
		DebugLocation(107, 80);
		} finally { DebugExitRule(GrammarFileName, "generalTagList"); }
		return;

	}
	// $ANTLR end "generalTagList"

	partial void EnterRule_game();
	partial void LeaveRule_game();
	// $ANTLR start "game"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:1: game : generalTagList ( WS )+ ( moveList )? ( WS )* ( GAME_RESULT_END_OF_MOVETEXT )? ( WS )* ;
	[GrammarRule("game")]
	private void game()
	{
		EnterRule_game();
		EnterRule("game", 6);
		TraceIn("game", 6);
		try { DebugEnterRule(GrammarFileName, "game");
		DebugLocation(109, 1);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:6: ( generalTagList ( WS )+ ( moveList )? ( WS )* ( GAME_RESULT_END_OF_MOVETEXT )? ( WS )* )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:8: generalTagList ( WS )+ ( moveList )? ( WS )* ( GAME_RESULT_END_OF_MOVETEXT )? ( WS )*
			{
			DebugLocation(109, 8);
			PushFollow(Follow._generalTagList_in_game728);
			generalTagList();
			PopFollow();

			DebugLocation(109, 23);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:23: ( WS )+
			int cnt7=0;
			try { DebugEnterSubRule(7);
			while (true)
			{
				int alt7=2;
				try { DebugEnterDecision(7, false);
				int LA7_1 = input.LA(1);

				if ((LA7_1==WS))
				{
					alt7 = 1;
				}


				} finally { DebugExitDecision(7); }
				switch (alt7)
				{
				case 1:
					DebugEnterAlt(1);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:23: WS
					{
					DebugLocation(109, 23);
					Match(input,WS,Follow._WS_in_game730); 

					}
					break;

				default:
					if (cnt7 >= 1)
						goto loop7;

					EarlyExitException eee7 = new EarlyExitException( 7, input );
					DebugRecognitionException(eee7);
					throw eee7;
				}
				cnt7++;
			}
			loop7:
				;

			} finally { DebugExitSubRule(7); }

			DebugLocation(109, 27);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:27: ( moveList )?
			int alt8=2;
			try { DebugEnterSubRule(8);
			try { DebugEnterDecision(8, false);
			int LA8_1 = input.LA(1);

			if ((LA8_1==MOVE_LABEL))
			{
				alt8 = 1;
			}
			} finally { DebugExitDecision(8); }
			switch (alt8)
			{
			case 1:
				DebugEnterAlt(1);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:28: moveList
				{
				DebugLocation(109, 28);
				PushFollow(Follow._moveList_in_game734);
				moveList();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(8); }

			DebugLocation(109, 39);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:39: ( WS )*
			try { DebugEnterSubRule(9);
			while (true)
			{
				int alt9=2;
				try { DebugEnterDecision(9, false);
				int LA9_1 = input.LA(1);

				if ((LA9_1==WS))
				{
					alt9 = 1;
				}


				} finally { DebugExitDecision(9); }
				switch ( alt9 )
				{
				case 1:
					DebugEnterAlt(1);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:39: WS
					{
					DebugLocation(109, 39);
					Match(input,WS,Follow._WS_in_game738); 

					}
					break;

				default:
					goto loop9;
				}
			}

			loop9:
				;

			} finally { DebugExitSubRule(9); }

			DebugLocation(109, 43);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:43: ( GAME_RESULT_END_OF_MOVETEXT )?
			int alt10=2;
			try { DebugEnterSubRule(10);
			try { DebugEnterDecision(10, false);
			int LA10_1 = input.LA(1);

			if ((LA10_1==GAME_RESULT_END_OF_MOVETEXT))
			{
				alt10 = 1;
			}
			} finally { DebugExitDecision(10); }
			switch (alt10)
			{
			case 1:
				DebugEnterAlt(1);
				// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:43: GAME_RESULT_END_OF_MOVETEXT
				{
				DebugLocation(109, 43);
				Match(input,GAME_RESULT_END_OF_MOVETEXT,Follow._GAME_RESULT_END_OF_MOVETEXT_in_game741); 

				}
				break;

			}
			} finally { DebugExitSubRule(10); }

			DebugLocation(109, 72);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:72: ( WS )*
			try { DebugEnterSubRule(11);
			while (true)
			{
				int alt11=2;
				try { DebugEnterDecision(11, false);
				int LA11_1 = input.LA(1);

				if ((LA11_1==WS))
				{
					alt11 = 1;
				}


				} finally { DebugExitDecision(11); }
				switch ( alt11 )
				{
				case 1:
					DebugEnterAlt(1);
					// H:\\Work\\redchess\\PgnParser\\Pgn.g:109:72: WS
					{
					DebugLocation(109, 72);
					Match(input,WS,Follow._WS_in_game744); 

					}
					break;

				default:
					goto loop11;
				}
			}

			loop11:
				;

			} finally { DebugExitSubRule(11); }

			DebugLocation(110, 1);

				if(PlayGame)
				{
					m_processor.ResetGame();
					m_optionalTags.Clear();
				}


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("game", 6);
			LeaveRule("game", 6);
			LeaveRule_game();
		}
		DebugLocation(116, 1);
		} finally { DebugExitRule(GrammarFileName, "game"); }
		return;

	}
	// $ANTLR end "game"

	partial void EnterRule_annotation();
	partial void LeaveRule_annotation();
	// $ANTLR start "annotation"
	// H:\\Work\\redchess\\PgnParser\\Pgn.g:118:1: annotation : ( blockComment | variantLine ) ;
	[GrammarRule("annotation")]
	private void annotation()
	{
		EnterRule_annotation();
		EnterRule("annotation", 7);
		TraceIn("annotation", 7);
		try { DebugEnterRule(GrammarFileName, "annotation");
		DebugLocation(118, 42);
		try
		{
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:118:12: ( ( blockComment | variantLine ) )
			DebugEnterAlt(1);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:118:14: ( blockComment | variantLine )
			{
			DebugLocation(118, 14);
			// H:\\Work\\redchess\\PgnParser\\Pgn.g:118:14: ( blockComment | variantLine )
			int alt12=2;
			try { DebugEnterSubRule(12);
			try { DebugEnterDecision(12, false);
			int LA12_1 = input.LA(1);

			if ((LA12_1==BLOCK_COMMENT))
			{
				alt12 = 1;
			}
			else if ((LA12_1==LEFT_BRACKET))
			{
				alt12 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 12, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(12); }
			switch (alt12)
			{
			case 1:
				DebugEnterAlt(1);
